Latest source commit

--- a/sha-arp/assignment1/6.html
+++ b/sha-arp/assignment1/6.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h3>C Mart - Virtual Grocery Shop</h3>
-    <!--
+    
     <div class="container">
         <div class="row">
             <div class="col-12 col-md-8">
@@ -40,11 +40,13 @@
             <div class="col-12 col-md-8">
             <h4>6c. Do you anticipate any disruptive technologies in your business? If yes, how do you expect to counter the threat; if no, why not?</h4>
             <p>
-                
+               Currently we are the disruptive technology. But we do expect new products and disruptive technolgies in the future! We will be doing market,
+                 research, trend analysis and innovate to keep our product a step ahead of our competitors.
+                a step ahead of our competitors.
             </p>
             </div>
         </div>
     </div>
-    -->
+  
 </body>
 </html>
